--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.ataccama</groupId>
-    <artifactId>ataccama_calc_api_test</artifactId>
+    <groupId>com.calc_api</groupId>
+    <artifactId>calc_api_test</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -95,7 +95,6 @@
         </pluginManagement>
     </build>
 
-
     <dependencies>
         <dependency>
             <groupId>io.rest-assured</groupId>
@@ -142,7 +141,5 @@
             <artifactId>json-schema-validator</artifactId>
             <version>4.1.2</version>
         </dependency>
-
     </dependencies>
-
 </project>
